# gta-reversed-modern

./: .gitmodules  CMakeLists.txt  CMakePresets.json  premake5.lua  setup.py
source/: CMakeLists.txt  InjectHooksMain.cpp  StdInc.h  config.h  premake5.lua
source/app/: app_camera.cpp  app_light.cpp
source/app/platform/win/: Input.cpp  VideoMode.cpp  VideoModeSelectDialog.cpp  WinMain.cpp  WinPs.cpp  WndProc.cpp
source/extensions/: EntityRef.hpp  HeapPtrArray.hpp  utility.hpp
source/extensions/Configs/: Miscellaneous.hpp
source/extensions/Shapes/: AngledRect.cpp
source/game_sa/: 3dMarkers.cpp  Cam.cpp  Cam.h  Camera.cpp  Camera.h  CarAI.cpp  CarCtrl.cpp  CarEnterExit.cpp  CarGenerator.cpp  CarGenerator.h  Clothes.cpp  ClothesBuilder.cpp  CompressedBox.cpp  CompressedBox.h  CompressedMatrixNotAligned.cpp  CompressedMatrixNotAligned.h  CompressedVector.h  Crime.cpp  Crime.h  CutsceneMgr.cpp  EntryExit.cpp  EntryExit.h  EntryExitManager.cpp  EntryExitManager.h  Explosion.cpp  FileLoader.cpp  FileMgr.cpp  Game.cpp  GameLogic.cpp  Gamma.cpp  GangWars.cpp  Gangs.cpp  Garages.cpp  Garages.h  GenericGameStorage.cpp  GenericGameStorage.h  Glass.cpp  GrassRenderer.cpp  GrassRenderer.h  Hud.cpp  (+70 more)
source/game_sa/Animation/: AnimBlendAssocGroup.cpp  AnimBlendAssociation.cpp  AnimManager.cpp
source/game_sa/Audio/: AEAudioUtility.cpp  AESmoothFadeThread.cpp  AESmoothFadeThread.h  AESmoothFadeThread_dsound.cpp  AESmoothFadeThread_shared.cpp  AESound.cpp  AESound.h  AEStreamThread.cpp  AudioEngine.cpp  AudioZones.cpp  audio_platform.h
source/game_sa/Audio/OpenAL/: OALBase.cpp  OALBase.h  OALBuffer.cpp  OALBuffer.h  OALSource.cpp  OALSource.h
source/game_sa/Audio/entities/: AEPedSpeechAudioEntity.cpp  AEPedSpeechAudioEntity.h  AEVehicleAudioEntity.cpp  AEWeaponAudioEntity.cpp
source/game_sa/Audio/hardware/: AEAudioChannel.cpp  AEAudioChannel.h  AEAudioChannel_dsound.cpp  AEAudioChannel_openal.cpp  AEAudioChannel_shared.cpp  AEAudioHardware.cpp  AEAudioHardware.h  AEAudioHardware_dsound.cpp  AEAudioHardware_openal.cpp  AEAudioHardware_shared.cpp  AEStaticChannel.cpp  AEStaticChannel.h  AEStaticChannel_dsound.cpp  AEStaticChannel_openal.cpp  AEStaticChannel_shared.cpp  AEStreamingChannel.cpp  AEStreamingChannel.h  AEStreamingChannel_dsound.cpp  AEStreamingChannel_openal.cpp  AEStreamingChannel_shared.cpp
source/game_sa/Audio/loaders/: AEDataStream.cpp  AEDataStream.h  AEMP3BankLoader.cpp
source/game_sa/Audio/managers/: AECutsceneTrackManager.cpp  AECutsceneTrackManager.h  AERadioTrackManager.cpp  AERadioTrackManager.h  AESoundManager.cpp
source/game_sa/Collision/: Box.cpp  ColHelpers.h  ColLine.cpp  ColTriangle.cpp  ColTriangle.h  ColTrianglePlane.cpp  ColTrianglePlane.h  Collision.cpp  Collision.h  CollisionData.cpp  CollisionData.h  Sphere.cpp
source/game_sa/Core/: EntryInfoNode.cpp  KeyGen.cpp  KeyGen.h  Vector2D.h
source/game_sa/Entity/: Entity.cpp  Physical.cpp
source/game_sa/Entity/Object/: Object.cpp
source/game_sa/Entity/Ped/: CivilianPed.cpp  CivilianPed.h  Ped.cpp  Ped.h  PlayerPed.cpp  PlayerPed.h
source/game_sa/Entity/Vehicle/: Automobile.cpp  Automobile.h  Boat.cpp  Vehicle.cpp  Vehicle.h
source/game_sa/Enums/: eCrimeType.h  eWantedLevel.h
source/game_sa/Events/: Event.cpp  Event.h  EventEditableResponse.cpp  EventHandler.cpp  GroupEventHandler.cpp
source/game_sa/Frontend/: FrontendScreensPC.h  MenuManager_Draw.cpp  MenuManager_Gallery.cpp  MenuManager_Input.cpp  MenuManager_Internal.h  MenuManager_Pages.cpp  MenuManager_Process.cpp
source/game_sa/Fx/: CarFXRenderer.cpp  CarFXRenderer.h  Fx.h  FxEmitter.cpp  FxManager.cpp  FxSystemBP.cpp
source/game_sa/Interior/: InteriorManager_c.cpp
source/game_sa/Models/: ClumpModelInfo.cpp  VehicleModelInfo.cpp
source/game_sa/Pipelines/: PipelinesCommon.hpp
source/game_sa/Pipelines/CustomCarEnvMap/: CustomCarEnvMapPipeline.cpp  CustomCarEnvMapPipeline.h  CustomCarEnvMapPipeline_EnvAtm.cpp  CustomCarEnvMapPipeline_EnvMat.cpp  CustomCarEnvMapPipeline_SpecMat.cpp
source/game_sa/Plant/: PlantColEntEntry.cpp  PlantLocTri.cpp  ProcObjectMan.cpp  ProcSurfaceInfo.cpp  ProcSurfaceInfo.h
source/game_sa/Plugins/JPegCompressPlugin/: JPegCompress.cpp  JPegCompress.h
source/game_sa/Plugins/TwoDEffectPlugin/: 2dEffect.cpp  2dEffect.h
source/game_sa/RenderWare/: RenderWare.h
source/game_sa/RenderWare/rw/: rpcollis.h  rpdbgerr.cpp  rperror.h  rphanim.h  rplodatm.h  rplogo.h  rpmorph.h  rppatch.h  rpprtstd.h  rpptank.h  rprandom.h  rpskin.cpp  rpskin.h  rpspline.h  rpuvanim.h  rpworld.cpp  rpworld.h  rt2d.h  rt2danim.h  rtanim.h  rtbary.h  rtbmp.h  rtdict.h  rtimport.h  rtintsec.h  rtltmapcnv.h  rtnormmap.h  rtpick.h  rtpitexd.h  rtpng.h  rtquat.h  rtras.h  rtray.h  rtslerp.h  rttiff.h  rtvcat.h  rtworld.h  rwcore.cpp  rwcore.h  rwplcore.cpp  (+1 more)
source/game_sa/Scripts/: RunningScript.cpp  RunningScript.h  TheScripts.cpp  TheScripts.h
source/game_sa/Scripts/CommandParser/: Parser.hpp  ReadArg.hpp  StoreArg.hpp
source/game_sa/Scripts/Commands/: Basic.cpp  BasicCommands.cpp  Camera.cpp  Character.cpp  CharacterCommands.cpp  Clock.cpp  Comparasion.cpp  Game.cpp  Generic.cpp  Math.cpp  Mission.cpp  Object.cpp  Pad.cpp  Ped.cpp  Player.cpp  Script.cpp  Sequence.cpp  Text.cpp  Unused.cpp  Utility.cpp  Vehicle.cpp
source/game_sa/Tasks/: TaskManager.cpp  TaskManager.h
source/game_sa/Tasks/TaskTypes/: TaskComplexCopInCar.cpp  TaskComplexDie.cpp  TaskComplexEnterCar.cpp  TaskComplexFollowNodeRoute.cpp  TaskComplexPassObject.cpp  TaskComplexWalkRoundBuildingAttempt.cpp  TaskSimpleChoking.cpp  TaskSimpleEvasiveDive.cpp  TaskSimpleFightingControl.cpp  TaskSimplePlayerOnFoot.cpp  (+2 more)
source/reversiblehooks/: ReversibleHooks.cpp  ReversibleHooks.h
source/reversiblehooks/ReversibleHook/: Base.h  ScriptCommand.h  Simple.cpp  Simple.h  Virtual.cpp  Virtual.h
source/toolsmenu/DebugModules/: CTeleportDebugModule.cpp  DebugModules.cpp  HooksDebugModule.cpp  PedDebugModule.cpp  PedDebugModule.h  PoolsDebugModule.cpp  ProcObjectDebugModule.cpp  ProcObjectDebugModule.h  VehicleInfoDebugModule.cpp  VehicleInfoDebugModule.h
(+4 files in other folders)
